- use /MD link flag - update linker libraries (adding userenv.lib) - fix run task